* Fix - Don't require shipping when purchasing a virtual variable subscription product using Google Pay and Apple Pay.
* Fix - When using Payment Request buttons, fix $0 total for stores using a customized product page that adds the variation product ID directly into the cart.
* Tweak - Improve compatibility with PHP 8+.

= 7.7.0 - 2023-11-09 =
* Add - Prevent saving the bank statement descriptor if it contains non-Latin characters.
* Fix - Display the Payment Request Buttons' error message in the classic checkout page.
* Fix - Prevent escaping the anchor tag under the Apple Pay domain registration failure notice.
* Fix - Use the card's payer name for Payment Request Buttons when the billing name isn't available.
* Fix - Display the Payment Request Buttons according to the selected settings.
* Tweak - Record Track events during the onboarding process.
* Tweak - Prevent Google Pay and Apple Pay from showing up in the UPE card Element.
* Tweak - Use admin theme color in selectors.
* Tweak - Refactor `is_valid_pay_for_order_endpoint` for better performance.
* Fix - Catch request failure errors.
* Tweak - Add test mode notice.
* Fix - Remove ugx from the zero decimal currency list as a special case in Stripe.
* Fix - Deleting customer on staging site detaches tokens from customer in Stripe.
* Fix - Resolved an issue preventing changing a subscriptions payment method when UPE is enabled.
* Fix - Send customer billing and address details to Stripe when changing a subscriptions payment method.
* Add - Attach billing details to customers created in Stripe to support Indian merchants in processing international transactions.
* Fix - Prevent "Invalid recurring shipping method" errors when attempting to purchase a synchronised subscription with payment request buttons.
* Fix - When using Payment Request buttons on variable product pages, ensure shipping is properly calculated after the customer closes the window and changes variations.