@@ -6,6 +6,7 @@
 * Fix - Hide the Google Pay and Apple Pay buttons on variable product pages, if the selected variation is not supported by Payment Request buttons.
 * Fix - Don't require shipping when purchasing a virtual variable subscription product using Google Pay and Apple Pay.
 * Fix - When using Payment Request buttons, fix $0 total for stores using a customized product page that adds the variation product ID directly into the cart.
+* Fix - MultiBanco: HTML tags to print as expected on the Order Confirmation page, and "Thank you for your order" email.
 * Tweak - Improve compatibility with PHP 8+.
 
 = 7.7.0 - 2023-11-09 =
